src/test/deca/syntax/invalid/mauvais_decl_field_2.deca
// Description:
//    on déclare mal un champ
//
// Resultats:
//   

class A {
	int a
	float b;
	
}